# mlsysops-framework

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  MAINTAINERS.md  NOTICE  README.md  index.html  mkdocs.yml  sitemap.xml
agents/: .gitignore  Makefile  docker-compose.yml
design/: index.html
developer-guide/: index.html
docs/: .nav.yml  index.md  installation.md  quickstart.md  testbed.md
installation/: index.html
mlconnector/: README.md  api_full_documentation.md  docker-compose.yaml
mlconnector/src/: Dockerfile  alembic.ini  main.py  pyproject.toml  startup.sh
mlconnector/src/db/: db_setup.py  redis_setup.py
mlconnector/src/endpoints/: endpoint_tags.json  mldeployment.py  mlmodels.py  mlresource.py  mltraining.py
mlconnector/src/migrations/: env.py
mlconnector/src/models/: mldeployment.py  mlmodels.py  mlresources.py  mltraining.py
mlconnector/src/schema/: mldeployment.py  mlmodels.py  mloperations.py  mlresource.py  mltraining.py
mlconnector/src/utils/: generate_train.py  get_model.py  manage_s3.py  mldeployments.py  mlmodels.py  mloperations.py  mlresources.py  mltrainings.py  requirements.txt
mlconnector/src/utils/api/: endpoint_tags.json  generate_dockerfile.py  requirements.txt
mlconnector/src/utils/train/: .env  requirements.txt
mlsysops-cli/: .gitignore  README.md  ivn.yml  mlsysops-test-app-description.yaml  nubis.kubeconfig  pyproject.toml
northbound-api/: .gitlab-ci.yml  Dockerfile  MLSysOps-CRD.yaml  Makefile  docker-compose.yaml  getallpods.py  karmada_info.py  main.py  mlsysops-test-app-description.yaml  requirements.txt
(+370 files in other folders)
